@@ -3,6 +3,9 @@ vesion <unreleased>
 Core
 + Improved support for HTML5 subtitles
 
+Extractors
++ [openload] Support subtitles (#10625)
+
 
 version 2016.09.24
 
